<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>talosbot_teleop</name>
  <version>1.0.0</version>
  <description>
    Teleop and Locking Pin Control using keyboard for Talosbot
  </description>
  <maintainer email="michaeljonathan664@gmail.com">mich1342</maintainer>
  <license>Apache 2.0</license>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
